--- a/css/common.css
+++ b/css/common.css
@@ -428,3 +428,14 @@ input:-moz-placeholder {
 .m-option-handle .u-items .item {
   float: left;
 }
+.m-cnt {
+  padding: 20px;
+}
+.m-cvs {
+  width: 500px;
+  margin: 0 auto;
+  background: #fff;
+}
+.m-audience {
+  width: 100%;
+}
