--- a/src/common.less
+++ b/src/common.less
@@ -122,3 +122,14 @@
     }
   }
 }
+.m-cnt{
+  padding: 20px;
+}
+.m-cvs{
+  width: 500px;
+  margin: 0 auto;
+  background: #fff;
+}
+.m-audience{
+  width: 100%;
+}
